<resources>
    <string name="app_name">Don\'t Panic!</string>
    <string name="emergencyLabel">Emergency</string>
    <string name="generalLabel">General</string>
    <string name="backButtonLabel">Back</string>
    <string name="defaultLabel">Default</string>

    <!-- String resources for confirmation pop-up dialog -->
    <string name="yesButton">Yes</string>
    <string name="noButton">No</string>

    <!-- String resources for the guided breathing module -->
    <string name="breatheInstructionIn">breathe in</string>
    <string name="breatheInstructionOut">breathe out</string>
    <string name="guidedBreathingVisualDescription">Circle that expands and shrinks with each breath</string>

    <!-- String resources for the First View Screen -->
    <string name="description1">Everyone experiences times of anxiety in their life.</string>
    <string name="description2">Let\'s Get Started</string>

    <!-- String resources for the Modules Screen -->
    <string name="modulesButton">MODULES</string>
    <string name="lastCompletedModuleButton">Recommended Module:</string>
    <string name="launchModuleButton">Launch</string>
    <string name="seeAllModulesButton">See All Modules</string>
    <string name="moduleSequencesButton">MODULE SEQUENCES</string>
    <string name="lastCompletedSequenceButton">Recommended Sequence:</string>
    <string name="launchModuleSequencesButton">Launch</string>
    <string name="editButton">Edit</string>
    <string name="deleteButton">Delete</string>
    <string name="seeAllSequencesButton">See All Sequences</string>
    <string name="noRecommendation">No recommendation</string>
    <string name="finish">Finish</string>

    <!-- String Resources for Module names -->
    <string name="guidedBreathing">Guided Breathing</string>
    <string name="mentalExercises">Mental Exercises</string>
    <string name="selfReflection">Self Reflection</string>
    <string name="appActivities">Activities</string>
    <string name="hapticHeartbeat">Haptic Heartbeat</string>

    <!-- String resources for the General Use Screen -->
    <string name="title">DON\'T PANIC</string>
    <string name="thought">THOUGHT OF THE DAY</string>
    <string name="wellBeing">The building blocks of well-being</string>
    <string name="readMore">Read more</string>
    <string name="modulesGeneral">MODULES</string>
    <string name="settingsButton">SETTINGS</string>
    <string name="notificationsButton">NOTIFICATIONS</string>
    <string name="helpButton">HELP</string>

    <!-- String resources for Module Sequences -->
    <string name="sequencesHeader">SEQUENCES</string>
    <string name="mySequencesHeader">My Sequences:</string>
    <string name="noSequencesText">No sequences. Create one below!</string>
    <string name="noSequencesTextShort">No sequences.</string>
    <string name="defaultSequenceName">Default Sequence</string>
    <string name="launchSequenceButton">Launch</string>
    <string name="editSequenceButton">Edit</string>
    <string name="deleteSequenceButton">Delete</string>
    <string name="createSequenceButton">Create Sequence</string>
    <string name="insertSequenceName">New Sequence Name</string>
    <string name="cancelButton">Cancel</string>

    <!-- String resources for Settings -->
    <string name="appSettings">SETTINGS</string>

    <string name="generalSettings">GENERAL</string>
    <string name="volumeSettings">Master Volume</string>
    <string name="hapticsSettings">Enable Haptics</string>
    <string name="hapticsStrength">Haptic Strength</string>

    <string name="accessibilitySettings">ACCESSIBILITY</string>
    <string name="textScale">Text Scale</string>

    <string name="guidedBreathingSettings">GUIDED BREATHING</string>
    <string name="audioToggleSettings">Enable Audio</string>
    <string name="breathDuration">Breath Length</string>

    <string name="default_sequence_explanation">The default sequence will be launched when the Emergency button is pressed.</string>
    <string name="current_label">Current:</string>
    <string name="select_label">Select</string>

    <!-- String resources for App Activities -->
    <string name="activityTitle">App Activities.</string>
    <string name="activityLabel">Activity 1</string>
    <string name="activityLabel2">Activity 2</string>
    <string name="activityOverview">These activities are meant to help you keep your mind off from your worries.</string>

    <string name="activityDescription">Follow the circle.</string>
    <string name="activityDescription2">Tap the circles.</string>

</resources>