<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    tools:context=".AppExerciseSelectionActivity">

    <TextView
        android:id="@+id/appView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-black"
        android:text="@string/activityTitle"
        android:textAlignment="center"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246" />

    <TextView
        android:id="@+id/appView2"
        android:layout_width="265dp"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif-black"
        android:text="@string/activityOverview"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="italic"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appView"
        app:layout_constraintVertical_bias="0.014" />

    <Button
        android:id="@+id/appButton"
        android:layout_width="244dp"
        android:layout_height="wrap_content"

        android:background="@drawable/round_btn"
        android:fontFamily="sans-serif-light"
        android:text="@string/activityLabel"
        android:textAlignment="center"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appView2"
        app:layout_constraintVertical_bias="0.069" />

    <Button
        android:id="@+id/appButton2"
        android:layout_width="244dp"
        android:layout_height="wrap_content"

        android:background="@drawable/round_btn"
        android:fontFamily="sans-serif-light"
        android:text="@string/activityLabel2"
        android:textAlignment="center"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appButton"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/rectangle_btn"
        android:fontFamily="sans-serif-light"
        android:text="@string/backButtonLabel"
        android:textAlignment="center"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />


</androidx.constraintlayout.widget.ConstraintLayout>
