<?xml version="1.0" encoding="utf-8"?>
<!-- MS: 4/7/22 - initial code -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark_purple"
    tools:context=".SettingsActivity"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/mainHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/guidedBreathingSettings"
        android:theme="@style/HeaderLevelOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/AudioSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-light"
        android:maxWidth="300dp"
        android:text="@string/audioToggleSettings"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:theme="@style/SwitchDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainHeader" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/HapticSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-light"
        android:maxWidth="300dp"
        android:text="@string/hapticsSettings"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:theme="@style/SwitchDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AudioSwitch" />

    <LinearLayout
        android:id="@+id/breathDurationLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/HapticSwitch"
        app:layout_constraintTop_toBottomOf="@+id/HapticSwitch">

        <TextView
            android:id="@+id/breathDurationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/breathDuration"
            android:textAlignment="textStart"
            android:theme="@style/BodyText" />

        <SeekBar
            android:id="@+id/breathDurationBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:max="10"
            android:theme="@style/SeekBarDark" />
    </LinearLayout>

    <Button
        android:id="@+id/backButtonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rectangle_btn"
        android:onClick="switchToAppSettings"
        android:text="@string/backButtonLabel"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>